--- a/package.json
+++ b/package.json
@@ -1,46 +1,53 @@
 {
-	"name": "@elijahjcobb/***",
-	"version": "0.1.0",
-	"description": "",
-	"keywords": [],
-	"main": "js/index",
-	"types": "dts/index",
-	"files": [
-		"js",
-		"dts"
-	],
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"prepublishOnly": "npm run compile",
-		"compile": "npm run clean && /usr/local/bin/tsc -p tsconfig.json",
-		"watch": "tsc -w -p .",
-		"clean": "rm -rf js && rm -rf dts",
-		"start": "node js/index.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/elijahjcobb/***.git"
-	},
-	"publishConfig": {
-		"access": "public"
-	},
-	"author": "Elijah Cobb <elijah@elijahcobb.com> (https://elijahcobb.com/)",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/elijahjcobb/***/issues"
-	},
-	"homepage": "https://github.com/elijahjcobb/***#readme",
-	"dependencies": {
-		"@elijahjcobb/prom-type": "latest",
-		"@element-ts/oxygen": "latest",
-		"@elijahjcobb/better-json": "latest",
-		"@element-ts/neon": "latest"
-	},
-	"devDependencies": {
-		"@types/node": "latest",
-		"typescript": "latest",
-		"tslint": "latest",
-		"jest": "latest",
-		"@types/jest": "latest"
-	}
+  "name": "@element-ts/chlorine",
+  "version": "0.1.0",
+  "description": "An abstracted, async, easy to use, type-safe function invocation event handler framework.",
+  "keywords": [
+    "event",
+    "handler",
+    "typescript",
+    "function",
+    "implement",
+    "invoke"
+  ],
+  "main": "js/index",
+  "types": "dts/index",
+  "files": [
+    "js",
+    "dts"
+  ],
+  "scripts": {
+    "test": "npm run compile && jest --config=jest.config.js",
+    "prepublishOnly": "npm run compile",
+    "compile": "npm run clean && /usr/local/bin/tsc -p tsconfig.json",
+    "watch": "tsc -w -p .",
+    "clean": "rm -rf js && rm -rf dts",
+    "start": "npm run compile && node js/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/element-ts/chlorine.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": "Elijah Cobb <elijah@elijahcobb.com> (https://elijahcobb.com/)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/element-ts/chlorine/issues"
+  },
+  "homepage": "https://github.com/element-ts/chlorine#readme",
+  "dependencies": {
+    "@elijahjcobb/prom-type": "latest",
+    "@element-ts/oxygen": "latest",
+    "@elijahjcobb/better-json": "latest",
+    "@element-ts/neon": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "latest",
+    "typescript": "latest",
+    "tslint": "latest",
+    "jest": "latest",
+    "@types/jest": "latest"
+  }
 }
